<resources>
    <string name="app_name">Rijks Museum Art</string>
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_black">sans-serif-black</string>
    <string name="roboto_thin">sans-serif-black</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="list_item_museum_image_desc">Museum Image</string>
    <string name="profile_github_account">Github Account</string>
    <string name="profile_full_name">Nama Lengkap</string>
    <string name="museum_detail_title">Museum Art Detail</string>
    <string name="museum_list_title">Rijks Museum Arts</string>
    <string name="title_profile">Profile</string>
    <string name="profile_dicoding_account">Dicoding Account</string>
    <string name="error_no_internet_connection">No internet connection Please try again.</string>
    <string name="button_retry">Retry</string>
    <string name="error_no_whatsapp">Please Install Whatsapp.</string>
</resources>
