<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_museum"
    app:startDestination="@id/museumListFragment">

    <action android:id="@+id/action_to_profile"
        app:destination="@id/profileFragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right"/>

    <fragment
        android:id="@+id/museumListFragment"
        android:name="nl.rijksmuseum.screens.museum.view.MuseumListFragment"
        android:label="@string/museum_list_title"
        tools:layout="@layout/fragment_museum_list">
        <action
            android:id="@+id/action_museumListFragment_to_museumDetailFragment"
            app:destination="@id/museumDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/museumDetailFragment"
        android:name="nl.rijksmuseum.screens.museum.view.MuseumDetailFragment"
        android:label="@string/museum_detail_title"
        tools:layout="@layout/fragment_museum_detail">
        <argument
            android:name="museumId"
            app:argType="string"/>
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="nl.rijksmuseum.screens.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>