<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="nl.rijksmuseum.models.MuseumArt" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/museum_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/list_item_museum_image_desc"
                android:scaleType="centerCrop"
                app:loadImageUrl="@{model.webImage.url}"
                tools:src="@drawable/img_dummy" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_toStartOf="@id/chevron_right"
                android:layout_toLeftOf="@id/chevron_right"
                android:layout_toEndOf="@id/museum_image"
                android:layout_toRightOf="@id/museum_image"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@string/roboto_black"
                    android:maxLines="2"
                    android:text="@{model.title}"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="Schutters van wijk II onder leiding van kapitein Frans Banninck Cocq, bekend als de ‘Nachtwacht’" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@string/roboto_light"
                    android:maxLines="1"
                    android:text="@{model.principalOrFirstMaker}"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    tools:text="Rembrandt Harmensz. van Rijn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:fontFamily="@string/roboto_light"
                    android:maxLines="3"
                    android:text="@{model.longTitle}"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    tools:text="Schutters van wijk II onder leiding van kapitein Frans Banninck Cocq, bekend als de ‘Nachtwacht’, Rembrandt Harmensz. van Rijn, 1642" />


            </LinearLayout>

            <ImageView
                android:id="@+id/chevron_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_chevron_right"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</layout>